--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="font-hanken">
     <main class="container mx-auto">
-        <section class="text-center font-medium flex flex-col md:flex-row max-w-[550px] shadow-lg rounded-2xl mx-auto md:mt-32">
+        <section class="text-center font-medium flex flex-col md:flex-row max-w-[550px] shadow-none md:shadow-lg rounded-2xl mx-auto md:mt-32">
           <div class="bg-gradient-to-b from-Light-slate-blue to-Light-royal-blue text-white rounded-2xl rounded-t-none md:rounded-t-2xl md:w-1/2 mb-5 md:mb-0">
             <h1 class="text-lg mb-5 pt-6 text-Light-lavender">Your Result</h1>
             <div class="rounded-full bg-gradient-to-b from-Violet-blue to-Persian-blue w-[135px] h-[135px] mx-auto flex flex-col place-content-center text-white">
@@ -20,35 +20,35 @@
                 <span class="text-sm block px-[35px] pt-2 pb-10 text-Light-lavender">You scored higher than 65% of the people who have taken these tests.
             <span><h3>
           </div>  
-          <div class="md:w-1/2">
+          <div class="md:w-1/2 pb-5">
             <h2 class="text-left pl-5 pb-5 pt-5 font-medium">Summary</h2>
             <section class="flex flex-col gap-y-3 items-center">
-                <div class=" bg-red-50 p-2 w-11/12 rounded-md flex justify-between">
+                <div class=" bg-red-50 p-4 mb-1 md:p-2 w-11/12 rounded-md flex justify-between">
                     <div class="text-Light-red">
-                        <img src="images/icon-reaction.svg" class="inline-block w-[15px]" alt=""><span class="inline-block ml-3">Reaction</span>
+                        <img src="images/icon-reaction.svg" class="inline-block w-[15px]" alt=""><span class="inline-block text-xl md:text-base ml-3">Reaction</span>
                     </div>
                     <p>80 / <span class="text-gray-400">100</span></p>
                 </div>
-                <div class=" bg-orange-50 p-2 w-11/12 rounded-md flex justify-between">
+                <div class=" bg-orange-50 p-4 mt-1 md:p-2 w-11/12 rounded-md flex justify-between">
                     <div class="text-Orangey-yellow">
-                        <img src="images/icon-memory.svg" class="inline-block w-[15px]" alt=""><span class="inline-block ml-3">Memory</span>
+                        <img src="images/icon-memory.svg" class="inline-block w-[15px]" alt=""><span class="inline-block text-xl md:text-base ml-3">Memory</span>
                     </div>
                     <p>92 / <span class="text-gray-400">100</span></p>
                 </div>
-                <div class=" bg-teal-50 p-2 w-11/12 rounded-md flex justify-between">
+                <div class=" bg-teal-50 p-4 mt-1 md:p-2 w-11/12 rounded-md flex justify-between">
                     <div class="text-Green-teal">
-                        <img src="images/icon-verbal.svg" class="inline-block w-[15px]" alt=""><span class="inline-block ml-3">Verbal</span>
+                        <img src="images/icon-verbal.svg" class="inline-block w-[15px]" alt=""><span class="inline-block text-xl md:text-base ml-3">Verbal</span>
                     </div>
                     <p>61 / <span class="text-gray-400">100</span></p>
                 </div>
 
-                <div class=" bg-slate-50 p-2 w-11/12 rounded-md flex justify-between">
+                <div class=" bg-slate-50 p-4 mt-1 md:p-2 w-11/12 rounded-md flex justify-between">
                     <div class="text-Cobalt-blue">
-                        <img src="images/icon-visual.svg" class="inline-block w-[15px]" alt=""><span class="inline-block ml-3">Visual</span>
+                        <img src="images/icon-visual.svg" class="inline-block w-[15px]" alt=""><span class="inline-block text-xl md:text-base ml-3">Visual</span>
                     </div>
                     <p>72 / <span class="text-gray-400">100</span></p>
                     </div>
-                    <a href="#" class="py-2 mt-3 bg-Dark-gray-blue hover:bg-Light-slate-blue w-11/12 rounded-full text-white">Continue</a>
+                    <a href="#" class="p-4 text-2xl md:text-sm md:py-2 mt-3 bg-Dark-gray-blue hover:bg-Light-slate-blue w-11/12 rounded-full text-white">Continue</a>
             </section>
           </div>
         </section>
